--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Work in progress.
+<!doctype html>
+<html lang=en>
+
+<head>
+	<meta charset=UTF-8 />
+	<meta name=description content="Free coming soon template">
+	<meta name=author content="Pawel Zuchowski">
+	<meta name=viewport content="width=device-width,initial-scale=1" />
+	<meta http-equiv=X-UA-Compatible content="ie=edge" />
+	<link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel=stylesheet>
+	<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;700&display=swap" rel=stylesheet>
+	<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+	<script src=https://kit.fontawesome.com/3c09bcb51a.js></script>
+	<title>Work in progress</title>
+	<link href="styles/main.css" rel="stylesheet">
+</head>
+
+<body>
+	<div class=container>
+		<div class=row>
+			<div class="left-wrap col-12 col-md-5">
+				<div class=left>
+					<p>Work In Progress</p>
+					<p>Stay tuned</p>
+				</div>
+			</div>
+			<div class="col-12 col-md-7 right">
+				<div class=mainInfo>
+					<h1>ULTRASUEDE GREEN Pvt. Ltd.</h1>
+					
+					<p class=slogan>Vision is to provide best quality products to our clients at competitive price and by continuous value addition. And aims to be a dynamic and environment – friendly textiles manufacturer. We strive to serve our clients and do right by all of our stakeholders by incorporating our core values pf quality, innovation, and transparency, and reliability.</p>
+					
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="scripts/bundle.js"></script>
+
+	</body>
+
+	</html>
