--- a/index.html
+++ b/index.html
@@ -1,42 +1,67 @@
-<!doctype html>
-<html lang=en>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset=UTF-8 />
-	<meta name=description content="Free coming soon template">
-	<meta name=author content="Pawel Zuchowski">
-	<meta name=viewport content="width=device-width,initial-scale=1" />
-	<meta http-equiv=X-UA-Compatible content="ie=edge" />
-	<link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css>
-	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel=stylesheet>
-	<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;700&display=swap" rel=stylesheet>
-	<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-	<script src=https://kit.fontawesome.com/3c09bcb51a.js></script>
-	<title>Work in progress</title>
-	<link href="styles/main.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>ULTRASUEDE GREEN</title>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link href="style.css" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class=container>
-		<div class=row>
-			<div class="left-wrap col-12 col-md-5">
-				<div class=left>
-					<p>Work In Progress</p>
-					<p>Stay tuned</p>
+
+	<div class="site-wrapper video-background">
+
+		<a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=k_okcNVZqqI', containment:'body', autoPlay:true, mute:true, startAt:5, stopAt: 120, quality:'small', opacity:1, }"></a>
+
+		<div class="overlay"></div>
+
+		<div class="site-wrapper-inner">
+
+			<div class="masthead clearfix">
+				<div class="inner">
+					<h3 class="masthead-brand">
+						<a href="tel:+919892481122">
+							<i class="fa fa-phone fa-fw"></i> +91 9892481122<br>
+							<small>Click to call now &nbsp; <i class="fa fa-level-up"></i></small>
+						</a>
+					</h3>
 				</div>
 			</div>
-			<div class="col-12 col-md-7 right">
-				<div class=mainInfo>
-					<h1>ULTRASUEDE GREEN Pvt. Ltd.</h1>
-					
-					<p class=slogan>Vision is to provide best quality products to our clients at competitive price and by continuous value addition. And aims to be a dynamic and environment – friendly textiles manufacturer. We strive to serve our clients and do right by all of our stakeholders by incorporating our core values pf quality, innovation, and transparency, and reliability.</p>
-					
+
+			<div class="cover-container">
+				<div class="inner cover">
+					<h1 class="cover-heading">SITE UNDER DEVELOPMENT</h1>
+					<h2>ULTRASUEDE GREEN</h2>
+					<p class="lead">
+						The company is carrying on the business of dying all kinds of textile Polyester Yarn, also processing all types of synthetic Polyester Yarn which is mainly used in Woven Labels.
+					</p>
+					<p class="lead">
+						Conducting an assay on a Green Polyester Yarn Dyeing unit that doesn't cause Pollution to Air or Water is a crucial step in ensuring sustainable and Eco-Friendly practices in the Textile industry.
+					</p>
+				</div>
+
+				<div class="mastfoot">
+					<div class="inner">
+						<p>Copyright &copy; <a href="https://ultrasuedegreen.com/">Ultrasuede Green Pvt. Ltd.</a></p>
 					</div>
 				</div>
+
 			</div>
+
 		</div>
-		<script type="text/javascript" src="scripts/bundle.js"></script>
+	</div>
 
-	</body>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-	</html>
+	<script src="js/device.min.js"></script>
+	<script src="js/jquery.mb.YTPlayer.js"></script>
+	<script src="js/custom.js"></script>
+
+</body>
+</html>
