--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title>ULTRASUEDE GREEN</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link href="style.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://ultrasuedegreen.com/style.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -56,12 +56,12 @@
 		</div>
 	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-	<script src="js/device.min.js"></script>
-	<script src="js/jquery.mb.YTPlayer.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="https://ultrasuedegreen.com/js/device.min.js"></script>
+	<script src="https://ultrasuedegreen.com/js/jquery.mb.YTPlayer.js"></script>
+	<script src="https://ultrasuedegreen.com/js/custom.js"></script>
 
 </body>
 </html>
