--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<div class="site-wrapper video-background">
 
-		<a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=k_okcNVZqqI', containment:'body', autoPlay:true, mute:true, startAt:5, stopAt: 120, quality:'small', opacity:1, }"></a>
+		<a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=k_okcNVZqqI', containment:'body', autoPlay:true, mute:true, startAt:5, stopAt: 120, quality:'720', opacity:1, }"></a>
 
 		<div class="overlay"></div>
 
