'Vaibhav:pull-push'

--- a/new/mission_and_vision.html
+++ b/new/mission_and_vision.html
@@ -82,7 +82,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home </a></li>
-						<li>Mission & Vision </li>
+						<li>Mission And Vision </li>
 					</ol>
 				</div>
 			</nav>
