--- a/new/investors_relations.html
+++ b/new/investors_relations.html
@@ -73,7 +73,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-8 text-center">
-							<h2>INVESTORS RELATIONS</h2>
+							<h2>Investors Relations</h2>
 						</div>
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home</a></li>
-						<li>INVESTORS RELATIONS</li>
+						<li>Investors Relations</li>
 					</ol>
 				</div>
 			</nav>
@@ -93,7 +93,7 @@
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-header">
-					<h2> INVESTORS RELATIONS</h2>
+					<h2>Investors Relations</h2>
 					
 				</div>
 
