--- a/new/managment_team.html
+++ b/new/managment_team.html
@@ -71,7 +71,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-8 text-center">
-							<h2> MANAGEMENT TEAM</h2>
+							<h2>Managment Team</h2>
 						</div>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home</a></li>
-						<li>MANAGEMENT TEAM</li>
+						<li>Managment Team</li>
 					</ol>
 				</div>
 			</nav>
