--- a/new/managment_team.html
+++ b/new/managment_team.html
@@ -100,7 +100,7 @@
 	<div class="container" data-aos="fade-up">
 
 		<div class="section-header">
-			<h2>Our Team</h2>
+			<h2>Managment Team</h2>
 			
 		</div>
 
