--- a/new/our_clients.html
+++ b/new/our_clients.html
@@ -71,7 +71,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
-							<h2>Our Clients</h2>
+							<h2>Our Client</h2>
 						</div>
 					</div>
 				</div>
@@ -80,7 +80,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home</a></li>
-						<li>Our Clients</li>
+						<li>Our Client</li>
 					</ol>
 				</div>
 			</nav>
@@ -97,6 +97,12 @@
 </body>
 <section id="clients" class="clients">
 	<div class="container" data-aos="zoom-out">
+		<div class="container" data-aos="fade-up">
+
+			<div class="section-header">
+				<h2>Our Client</h2>
+				
+			</div>
 
 		<div class="clients-slider swiper">
 			<div class="swiper-wrapper align-items-center">
