'Vaibhav:pull-push'

--- a/new/about_us.html
+++ b/new/about_us.html
@@ -82,7 +82,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home</a></li>
-						<li>About Page</li>
+						<li>About Us</li>
 					</ol>
 				</div>
 			</nav>
