--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 			</p>
 		</div>
 		<div class="credits">
-			Powered by <a href="https://virajkadam.com/" target="_blank" title="Viraj Kadam">Viraj Kadam</a>
+			Powered by <a href="https://virajkadam.com/" target="_blank" title="Viraj Kadam"><b>Viraj Kadam</b></a>
 		</div>
 	</div>
 
