--- a/our_rta.html
+++ b/our_rta.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>CORPORATE GOVERNANCE | ULTRASUEDE GREEN LIMITED</title>
+	<title>OUR RTA | ULTRASUEDE GREEN LIMITED</title>
 
 	<meta name="keywords" content="Viraj Kadam, Contact Viraj Kadam, About Viraj Kadam">
 	<meta name="description" content="Viraj Kadam is an Technology Lead, Passionate Learner & Educator">
@@ -114,11 +114,11 @@
 	<main id="main">
 
 		<div class="breadcrumbs">
-			<div class="page-header d-flex align-items-center" style="background-image: url('');">
+			<div class="page-header d-flex align-items-center">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
-						<div class="col-lg-8 text-center">
-							<h2>CORPORATE GOVERNANCE</h2>
+						<div class="col-lg-6 text-center">
+							<h2>Our RTA</h2>
 						</div>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index .html">Home</a></li>
-						<li>CORPORATE GOVERNANCE</li>
+						<li>Our RTA</li>
 					</ol>
 				</div>
 			</nav>
@@ -138,13 +138,14 @@
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-header">
-					<h2> CORPORATE GOVERNANCE</h2>
+					<h2>Our RTA</h2>
 				</div>
+
 			</div>
 		</section>
 
-
 	</main>
+
 
 
 
