--- a/corporate_governance.html
+++ b/corporate_governance.html
@@ -90,14 +90,15 @@
 
 		<div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 			<a href="index.html" class="logo d-flex align-items-center">
-				<h1>ULTRASUEDE GREEN<span>.</span></h1>
+				<img src="assets/img/logo.jpeg" class="img-fluid rounded-2">
+				<h1>ULTRASUEDE GREEN LIMITED</h1>
 			</a>
 			<nav id="navbar" class="navbar">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about_us.html">About Us</a></li>
 					<li><a href="mission_and_vision.html">Mission and Vision</a></li>
-					<li><a href="managment_team.html">Managment Team</a></li>
+					<li><a href="management_team.html">Management Team</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -167,8 +168,8 @@
 					<h4>Important Links</h4>
 					<ul>
 						<li><a href="mission_and_vision.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Mission And Vision</a></li>
-						<li><a href="managment_team.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Managment Team</a></li>
-						<li><a href="our_clients.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Our Clients</a></li>
+						<li><a href="management_team.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Management Team</a></li>
+						
 						<li><a href="contact.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Contact us</a></li>
 					</ul>
 				</div>
