--- a/management_team.html
+++ b/management_team.html
@@ -5,15 +5,17 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Management Team | ULTRASUEDE GREEN LIMITED</title>
+	<title>ULTRASUEDE GREEN LIMITED | Deying of Textile Polyester Yarn | Processing synthetic Polyester Yarn</title>
 
-	<meta name="keywords" content="Viraj Kadam, Contact Viraj Kadam, About Viraj Kadam">
-	<meta name="description" content="Viraj Kadam is an Technology Lead, Passionate Learner & Educator">
+	<meta name="keywords" content="ULTRASUEDE GREEN LIMITED | Deying of Textile Polyester Yarn | Processing synthetic Polyester Yarn">
+	<meta name="description" content="ULTRASUEDE GREEN LIMITED | Deying of Textile Polyester Yarn | Processing synthetic Polyester Yarn">
 
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta http-equiv="pragma" content="no-cache">
 	<meta http-equiv="expires" content="never">
+	<meta http-equiv="Expires" content="0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<meta name="author" content="ULTRASUEDE GREEN LIMITED">
@@ -55,11 +57,6 @@
 	<meta name="twitter:description" content="ULTRASUEDE GREEN LIMITED, Deying of Textile Polyester Yarn, Processing synthetic Polyester Yarn">
 	<meta name="twitter:image" content="LOGO">
 
-
-
-	<link href="assets/img/favicon.png" rel="icon">
-	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
 	<link href="https://fonts.googleapis.com/css2?family=Lato" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css">
@@ -76,35 +73,34 @@
 		<div class="container d-flex justify-content-center justify-content-md-between">
 			<div class="contact-info d-flex align-items-center">
 				<b><i class="bi bi-envelope-open"></i></b> &nbsp; 
-				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">ultrasuedegreenpvtltd23@gmail.com</a>
-
+				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">
+					ultrasuedegreenpvtltd23@gmail.com
+				</a>
 				<i class="bi bi-telephone d-flex align-items-center ms-4"></i></b> &nbsp; 
 				<a href="tel:+91 9892481122" class="text-white">+91 9892481122</a>
 			</div>
 		</div>
 	</section>
 
-
-
 	<header id="header" class="header d-flex align-items-center">
 
 		<div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 			<a href="index.html" class="logo d-flex align-items-center">
-				<h1>ULTRASUEDE GREEN<span>.</span></h1>
+				<img src="assets/img/logo.jpeg" class="img-fluid rounded-2">
+				<h1>ULTRASUEDE GREEN LIMITED</h1>
 			</a>
 			<nav id="navbar" class="navbar">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about_us.html">About Us</a></li>
 					<li><a href="mission_and_vision.html">Mission and Vision</a></li>
-					<li><a href="managment_team.html">Managment Team</a></li>
+					<li><a href="management_team.html">Management Team</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
 
 			<i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
 			<i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-
 		</div>
 	</header>
 
@@ -118,7 +114,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-8 text-center">
-							<h2>Managment Team</h2>
+							<h2>Management Team</h2>
 						</div>
 					</div>
 				</div>
@@ -127,7 +123,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="index.html">Home</a></li>
-						<li>Managment Team</li>
+						<li>Management Team</li>
 					</ol>
 				</div>
 			</nav>
@@ -139,7 +135,7 @@
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-header">
-					<h2>Managment Team</h2>
+					<h2>Management Team</h2>
 				</div>
 
 				<div class="row gy-3">
@@ -195,8 +191,8 @@
 								<h4>Important Links</h4>
 								<ul>
 									<li><a href="mission_and_vision.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Mission And Vision</a></li>
-									<li><a href="managment_team.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Managment Team</a></li>
-									<li><a href="our_clients.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Our Clients</a></li>
+									<li><a href="management_team.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Management Team</a></li>
+									
 									<li><a href="contact.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Contact us</a></li>
 								</ul>
 							</div>
