--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<h3 class="mt-5 display-5">Welcome to</h2>
 						<h2 class="my-1">ULTRASUEDE GREEN LIMITED</h2>
 
-						<p class="mt-5 fs-2">
+						<p class="mt-5 fs-2 text-white">
 							The company is carrying on the business of dying all kinds of textile Polyester Yarn,also processing all types of synthetic Polyester Yarn which is mainly used in Woven Labels.
 						</p>
 					</div>
@@ -191,83 +191,71 @@
 
 
 			<section id="services" class="services sections-bg">
-				<div class="container" data-aos="fade-up">
+				<div class="container mb-2">
 
-					<div class="section-header">
-						<h2>Our Services</h2>
-						<p>Aperiam dolorum et et wuia molestias qui eveniet numquam nihil porro incidunt dolores placeat sunt id nobis omnis tiledo stran delop</p>
+					<div class="section-header pb-2">
+						<h2>Our Mission & Vision</h2>
 					</div>
 
-					<div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
+					<div class="row">
 
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item  position-relative">
-								<div class="icon">
-									<i class="bi bi-activity"></i>
-								</div>
-								<h3>Nesciunt Mete</h3>
-								<p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+						<div class="col-lg-12 col-md-12 fade-in">
+							<div class="colorful-bg p-4">
+								<h2 class="colorful-text">Mission</h2>
+								<p class="fs-5">
+									The mission of our company is to be the most preferred and trustworthy channel partner in the textile industry. We strive hard to achieve the highest level of customer satisfaction through timely deliveries along with enhanced quality and value of all our products.
+								</p>
+								<ul class="list-unstyled fs-5">
+									<li class="colorful-text">
+										&bull; &nbsp; Delivering exceptional quality products to our clients. Ensuring timely deliveries, enhancing customer satisfaction.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Embracing innovative solutions in textile manufacturing. Promoting eco-friendly practices and sustainable manufacturing.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Delivering sustainable, high-quality fabrics to our clients. Leading innovation in textile technology and production.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Ensuring ethical practices throughout our supply chain. Empowering local communities through fair employment opportunities.
+									</li>
+
+								</ul>
 							</div>
 						</div>
 
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item position-relative">
-								<div class="icon">
-									<i class="bi bi-broadcast"></i>
-								</div>
-								<h3>Eosle Commodi</h3>
-								<p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
+
+						<div class="col-lg-12 col-md-12 fade-in my-3">
+							<div class="colorful-bg p-4">
+								<h2 class="colorful-text">Vision</h2>
+
+								<p class="fs-5">
+									Our vision is to provide the best quality products to our clients at competitive prices and by continuous value addition. We aim to be a dynamic and environment-friendly textile manufacturer. We strive to serve our clients and do right by all of our stakeholders by incorporating our core values of quality, innovation, transparency, and reliability.
+								</p>
+
+								<ul class="list-unstyled fs-5">
+									<li class="colorful-text">
+										&bull; &nbsp; Providing top-quality products at competitive prices. Continuous value addition through research and development.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Becoming a dynamic and environment-friendly textile manufacturer. Serving our clients with integrity and dedication.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Creating eco-friendly and biodegradable fabric alternatives. Promoting sustainable fashion and consumer choices.
+									</li>
+
+									<li class="colorful-text">
+										&bull; &nbsp; Contributing to a circular economy through recycling initiatives. Setting new standards for transparency and corporate responsibility.
+									</li>
+
+								</ul>
 							</div>
 						</div>
-
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item position-relative">
-								<div class="icon">
-									<i class="bi bi-easel"></i>
-								</div>
-								<h3>Ledo Markt</h3>
-								<p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-							</div>
-						</div>
-
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item position-relative">
-								<div class="icon">
-									<i class="bi bi-bounding-box-circles"></i>
-								</div>
-								<h3>Asperiores Commodit</h3>
-								<p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-							</div>
-						</div>
-
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item position-relative">
-								<div class="icon">
-									<i class="bi bi-calendar4-week"></i>
-								</div>
-								<h3>Velit Doloremque</h3>
-								<p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-							</div>
-						</div>
-
-						<div class="col-lg-4 col-md-6">
-							<div class="service-item position-relative">
-								<div class="icon">
-									<i class="bi bi-chat-square-text"></i>
-								</div>
-								<h3>Dolori Architecto</h3>
-								<p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-								<a href="#" class="readmore stretched-link">Read more <i class="bi bi-arrow-right"></i></a>
-							</div>
-						</div>
-
 					</div>
-
 				</div>
 			</section>
 
@@ -317,12 +305,11 @@
 
 							<div class="section-header">
 								<h2>Contact</h2>
-								<p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem dolore earum</p>
 							</div>
 
 							<div class="row justify-content-center">
 
-								<div class="col-xl-6 col-md-6 col-sm-6 col-6">
+								<div class="col-xl-6 col-md-6 col-sm-12 col-12">
 
 									<div class="info-container d-flex flex-column align-items-center justify-content-center">
 										<div class="info-item d-flex">
