--- a/kyc.html
+++ b/kyc.html
@@ -73,7 +73,7 @@
 		<div class="container d-flex justify-content-center justify-content-md-between">
 			<div class="contact-info d-flex align-items-center">
 				<b><i class="bi bi-envelope-open"></i></b> &nbsp; 
-				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">
+				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white text-break">
 					ultrasuedegreenpvtltd23@gmail.com
 				</a>
 				<i class="bi bi-telephone d-flex align-items-center ms-4"></i></b> &nbsp; 
@@ -167,7 +167,7 @@
 							</p>
 						</div>
 
-						<div class="col-lg-2 col-md-2 col-sm-12 col-12 footer-links fs-6">
+						<div class="col-lg-2 col-md-2 col-sm-6 col-6 footer-links fs-6">
 							<h4>Important Links</h4>
 							<ul>
 								<li><a href="mission_and_vision.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Mission And Vision</a></li>
@@ -177,7 +177,7 @@
 							</ul>
 						</div>
 
-						<div class="col-lg-2 col-md-2 col-sm-12 col-12 footer-links fs-6">
+						<div class="col-lg-2 col-md-2 col-sm-6 col-6 footer-links fs-6">
 							<h4>Useful Links</h4>
 							<ul>
 								<li><a href="our_rta.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Our RTA </a></li>
@@ -201,7 +201,7 @@
 							</p>
 							<p>
 								<b><i class="bi bi-envelope-open"></i> &nbsp; Email:</b><br>
-								<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">ultrasuedegreenpvtltd23@gmail.com &nbsp; <i class="bi bi-box-arrow-up-right"></i></a>
+								<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white text-break">ultrasuedegreenpvtltd23@gmail.com &nbsp; <i class="bi bi-box-arrow-up-right"></i></a>
 							</p>
 						</div>
 
