--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 		<div class="container d-flex justify-content-center justify-content-md-between">
 			<div class="contact-info d-flex align-items-center">
 				<b><i class="bi bi-envelope-open"></i></b> &nbsp; 
-				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">
+				<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white text-break">
 					ultrasuedegreenpvtltd23@gmail.com
 				</a>
 				<i class="bi bi-telephone d-flex align-items-center ms-4"></i></b> &nbsp; 
@@ -110,7 +110,7 @@
 	<main id="main">
 
 		<div class="breadcrumbs">
-			<div class="page-header d-flex align-items-center" style="background-image: url('');">
+			<div class="page-header d-flex align-items-center">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
@@ -198,7 +198,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-2 col-md-2 col-sm-12 col-12 footer-links fs-6">
+				<div class="col-lg-2 col-md-2 col-sm-6 col-6 footer-links fs-6">
 					<h4>Important Links</h4>
 					<ul>
 						<li><a href="mission_and_vision.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Mission And Vision</a></li>
@@ -208,7 +208,7 @@
 					</ul>
 				</div>
 
-				<div class="col-lg-2 col-md-2 col-sm-12 col-12 footer-links fs-6">
+				<div class="col-lg-2 col-md-2 col-sm-6 col-6 footer-links fs-6">
 					<h4>Useful Links</h4>
 					<ul>
 						<li><a href="our_rta.html"><i class="bi bi-caret-right-fill"></i> &nbsp; Our RTA </a></li>
@@ -232,7 +232,7 @@
 					</p>
 					<p>
 						<b><i class="bi bi-envelope-open"></i> &nbsp; Email:</b><br>
-						<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white">ultrasuedegreenpvtltd23@gmail.com &nbsp; <i class="bi bi-box-arrow-up-right"></i></a>
+						<a href="mailto:ultrasuedegreenpvtltd23@gmail.com" class="text-white text-break">ultrasuedegreenpvtltd23@gmail.com &nbsp; <i class="bi bi-box-arrow-up-right"></i></a>
 					</p>
 				</div>
 
